green-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-web-deploy
spec:
  selector:
    matchLabels:
      app: green-web
  replicas: 3
  template:
    metadata:
      labels:
        app: green-web
    spec:
      containers:
      - name: web1
        image: "gcr.io/google-samples/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: green-web-svc
spec:
  type: NodePort
  selector:
    app: green-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 30000
