ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: blue.35.229.244.53.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-nginx-service
          servicePort: 8000
  - host: green.35.229.244.53.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: green-nginx-service
          servicePort: 8000
